Re-create ten42 using ==> tns create

--- a/ten42/tsconfig.json
+++ b/ten42/tsconfig.json
@@ -9,12 +9,13 @@
         "skipLibCheck": true,
         "lib": [
             "es6",
-            "dom"
+            "dom",
+            "es2015.iterable"
         ],
         "baseUrl": ".",
         "paths": {
             "~/*": [
-                "app/*"
+                "src/*"
             ],
             "*": [
                 "./node_modules/*"
